--- a/mxvk/sp21.html
+++ b/mxvk/sp21.html
@@ -14,7 +14,7 @@ height: 100%;
 display: grid;
 align-items: center;
 text-align: center;}
-iframe {width:100%;
+video {width:100%;
 height: 0 auto;
 border: none;
 outline: none;
@@ -24,8 +24,9 @@ display: block}
 </head>
 <body>
 
-<iframe src="https://drive.google.com/file/d/10MrimjJi9WFzCBQGVybFmuadIOkNwnJV/view?usp=sharing">
-</iframe> 
+<video controls poster="https://images.ladbible.com/resize?type=jpeg&quality=70&width=1200&fit=contain&dpr=1&url=https://eu-images.contentstack.com/v3/assets/bltbc1876152fcd9f07/blt21dcb4e0e40736cb/61ab31375634cd1b519c73fc/resize_(5).jpg"
+<source src="https://drive.google.com/uc?export=download&id=10MrimjJi9WFzCBQGVybFmuadIOkNwnJV" type='video/mp4'>
+</video>
 
 </body>
 </html>
