--- a/bnsp/player/bnspen1/index.html
+++ b/bnsp/player/bnspen1/index.html
@@ -14,9 +14,8 @@
 * {margin: 0;
 padding: 0;
 font-size: 100%}
-html,body {display: grid;
-height: 100vh;
-align-items: center;
+html,body {width: 100%;
+height: 100%;
 text-align: center;
 background: #000}
 </style>
