--- a/radio/stream/online/PR-0908/index.html
+++ b/radio/stream/online/PR-0908/index.html
@@ -105,24 +105,10 @@ font-size: 17px;
 outline: none;
 float: left;
 margin: 23px 0 5px 15px;}
-
-.cont {position: fixed;
-top: 0;
-left: 0;
-right: 0;
-width: 100%;}
-
-.my {color: #ccc;
-float: right;
-margin: 20px;
-font-size: 13px;}
 </style>
 
 </head>
 <body>
-<div class="cont"> 
-<p class="my">© 2022 TV MALAYSIA</p> 
-</div>
 
 <section>
 <!-- Image/logo -->
@@ -134,7 +120,7 @@ font-size: 13px;}
 
 <br>
 
-<!-- Back & Next section -->
+<!-- Back & Next page -->
 <div class="section-page">
 <!-- Button back -->
 <button class="left">
